# phenotype-analysis-toolset-mcp

./: .dockerignore  .env.template  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  api_server.py  hpo_annotations.db  mcp_server.py  pyproject.toml  requirements.txt  smithery.yaml
.claude/: settings.local.json
embeddings/voyage_3/: index.faiss  index.pkl
schemas/: schema.json  schema.nodeTypeProperties.json
scripts/: create_db.py  generate_embeddings.py  populate_db.py  update_gene_ids.py
src/: embedding.py  graph.py  phenotype_analysis_rag.py  schema.sql  utils.py
tests/: __init__.py  test_get_hpo_name_by_id.py  test_get_hpo_name_by_id_fixed.py  test_mcp_functions_path_independence.py  test_path_independence.py  test_search_hpo_terms.py  test_server_status.py  test_server_status_from_different_dir.py  test_voyage_api_key_config.py
